analytics/styles.css
/* styles.css */
@import url('https://fonts.googleapis.com/css');
body {
    font-family:'Roboto', sans-serif;
}
*{
    margin: 0;
    padding: 0;
    list-style: none;
    text-decoration: none;
}
.sidebar {
    position: fixed;
    left: -250px;
    width: 250px;
    height: 100%;
    background: linear-gradient(to bottom, #ddc511, #e3a508, #e87605); /* Gradient from top to bottom */
    transition: all 0.5s;
}

.sidebar header{
    font-size: 22px;
    color: white;
    text-align: center;
    line-height: 70px;
    background-color: #e3a508;
    user-select: none;
}
.sidebar ul a{
    display:block;
    height: 100%;
    width: 100%;
    line-height: 65px;
    font-size: 20px;
    color: rgb(7, 7, 7);
    padding-left: 40px;
    box-sizing: border-box;
    border-top: 1px solid rgba(255,255,255,.1);
    border-bottom: 1px solid black;
    transition: .5s;
}
ul li:hover a{
    padding-left: 50px;
}
.sidebar ul a i{
    margin-right: 16px;
}
#check{
    display: none;
}
label #btn, label #cancel{
    position: absolute;
    cursor: pointer;
    background: #042331;
    border-radius: 3px ;
}
label #btn{
    left: 40px;
    top: 25px;
    font-size: 35px;
    color: white;
    padding:3px 10px;
    transition: all .5s;
    size: 30px;
}
label #cancel{
    z-index: 11;
    left: -100px;
    top: 25px;
    font-size: 10px;
    color: #0a5275;
    padding: 4px 4px;
    transition:all .5s ease;
}
#check:checked~.sidebar{
    left: 0;
}
#check:checked~label #btn{
    left: 250px;
    opacity: 0;
    pointer-events: none;
}
#check:checked ~ label #cancel{
    left: 230px;
}
#check:checked ~ section{
    margin-left: 250px;
}
section {
    background: url("images/BBU.png") no-repeat;
    background-position: center;
    background-size: cover;
    height: 30vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: rgb(69, 59, 59);
    font-size: 36px; /* Adjust the font size as needed */
    transition: all .5s;
}
/* styles.css */
body {
    font-family: Arial, sans-serif;
}

.analytics-panel {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    align-items: center;
    padding: 20px;
    min-height: 300px;
    transition: all .5s;
}

.section {
    border: 1px solid #ccc;
    padding: 20px;
    margin: 10px;
    width: 30%;
    display: flex;
}

h2 {
    margin-bottom: 10px;
}

.data{
    text-align: center;
    border: 2px solid #f7c968;  
    padding: 50px;
    transition: all .5s;
}

